Fix back-to-top button positioning to avoid overlap with social icons

--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -848,7 +848,7 @@ $text-meta-link-font-size: 0.8125rem; //13px
 
 // Back to Top Button
 $back-to-top-size: 44px !default;
-$back-to-top-right-offset: 90px !default;
+$back-to-top-right-offset: 100px !default;
 $back-to-top-bottom-offset: 30px !default;
 $back-to-top-offset-mobile: 20px !default;
 
